src/components/HouseSheet/style.module.scss
$breakpoint-md : 768px;
$breakpoint-lg : 1024px;
$breakpoint-xl : 1280px;

.main {
    padding: 0 45px 45px;

    @media (max-width: $breakpoint-md) {
        padding: 0 20px 45px;
    }

    &__dropdown {
        list-style: none;
        display: flex;
        justify-content: space-between;
        margin-top: 15px;

        & > li:first-child {
            margin-right: 20px;
        }

        & > li > ul {
            height: 150px;
            overflow-y: hidden;

            &:hover {
                overflow-y: auto;
            }
        }

        & > li > p {
            height: 150px;
            overflow-y: hidden;

            &:hover {
                overflow-y: auto;
            }
        }

        @media (max-width: $breakpoint-md) {
            flex-direction: column;
        }
    }
}

.containerInfo {
    margin-top: 20px;
    display: flex;
    justify-content: space-between;

    @media (max-width: $breakpoint-md) {
        flex-direction: column;
    }
}

